<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_rounded"
    android:padding="@dimen/_10sdp">

    <ImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEnterOTP"
        style="@style/TextViewStyleRegular"
        android:layout_width="wrap_content"
        android:text="@string/enter_otp"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgClose" />

    <TextView
        android:id="@+id/tvOTPDesc"
        style="@style/TextViewStyleRegular"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:singleLine="false"
        android:text="@string/otp_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEnterOTP" />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/colorPrimary"
        app:bar_height="2dp"
        app:height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOTPDesc"
        app:length="6"
        app:otp_box_background="@drawable/bg_otp_box"
        app:otp_box_background_active="@drawable/bg_otp_box_active"
        app:otp_box_background_error="@drawable/bg_otp_box_error"
        app:otp_box_background_inactive="@drawable/bg_otp_box_inactive"
        app:otp_box_background_success="@drawable/bg_otp_box_active"
        app:otp_text_size="@dimen/_20sdp"
        app:width="60dp" />


    <TextView
        android:id="@+id/tvOTPError"
        style="@style/TextViewStyleRegular"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/msg_enter_valid_otp"
        android:textColor="@color/error_color"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/otpTextView" />

    <include
        android:id="@+id/btnSubmitView"
        layout="@layout/custom_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOTPError" />

    <TextView
        android:id="@+id/tvResendOTP"
        style="@style/TextViewStyleMedium"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/resend_otp"
        android:textColor="@color/resend_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmitView" />

</androidx.constraintlayout.widget.ConstraintLayout>