<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".ui.login.LoginActivity">

    <!--Blue and Grey Background-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.45"
            android:background="@drawable/bg_bottom_rounded" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.55" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--Logo-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:src="@drawable/ic_splash_logo" />

        <TextView
            style="@style/TextViewStyleRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_email"
            android:textColor="@color/white"
            android:textSize="@dimen/_18sdp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--White container-->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llLogo">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_rounded"
                android:orientation="vertical"
                android:padding="@dimen/_15sdp">

                <TextView
                    style="@style/TextViewStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/welcome_to_app"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp" />


                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tvCountry"
                        style="@style/TextViewStyleRegular"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_edit_text"
                        android:text="@string/default_country" />

                    <Space
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="wrap_content" />

                    <EditText
                        android:id="@+id/etPhoneNumber"
                        style="@style/EditTextStyleRegular"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:hint="@string/phone_number"
                        android:inputType="phone"
                        android:singleLine="true" />

                </LinearLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chkAgree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:button="@drawable/selector_checkbox"
                    android:checked="false"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="top"
                    android:paddingStart="@dimen/_5sdp"
                    android:text="@string/agree_text" />

                <include
                    android:id="@+id/btnView"
                    layout="@layout/custom_button"
                    android:layout_width="@dimen/button_width"
                    android:layout_height="@dimen/button_height"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginBottom="@dimen/_20sdp" />
            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>